syntax = "proto3";
package member.v1;
option go_package = "go-mall/server/member/api/gen/v1;memberpb";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service MemberService {
  rpc GetMemberById(IdRequest) returns(MemberEntity); // 通过用户id获取会员信息
  rpc GetMemberByPhone(PhoneRequest) returns(MemberEntity); // 通过手机号码获取会员信息
  rpc CreateMember(CreateRequest) returns (MemberEntity); // 创建会员
  rpc UpdateMember(MemberEntity) returns (google.protobuf.Empty); // 更新会员
  rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); //检查密码
}

enum MemberStatus {
  DISABLED = 0;
  ENABLED = 1;
}

enum MemberGender {
  MAN = 0;
  WOMAN = 1;
}

message PhoneRequest {
  string phone = 1;
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse{
  bool success = 1;
}

message IdRequest {
  uint64 id = 1;
}

message MemberEntity {
  uint64 id = 1;
  uint64 member_level_id = 2;
  string username = 3;
  string password = 4;
  string nickname = 5;
  string phone = 6;
  string icon = 7;
  MemberStatus status = 8;
  MemberGender gender = 9;
  google.protobuf.Timestamp birthday = 10;
  string city = 11;
  string job = 12;
  int32 growth = 13;
  string created_at = 14;
}

message BasicInfo {
  uint64 id = 1;
  string username = 2;
  string nickname = 3;
}

message CreateRequest {
  string username = 1;
  string phone = 2;
  string password = 3;
}